--- a/clients/src/assets/styles/_variables.scss
+++ b/clients/src/assets/styles/_variables.scss
@@ -48,3 +48,7 @@ $padding-xxlarge: 40px;
 
 // opacity
 $opacity-hover: 0.6;
+
+// border radius
+$border-radius: 0.375rem;
+$xborder-radius: 0.575rem;
